# anyblox

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Justfile  LICENSE  README.md  dataset-download.sh
.cargo/: config.toml
anyblox/: Cargo.toml
anyblox-bench/: Cargo.toml
anyblox-bench/src/: ablation.rs  decoder_hash.rs  lib.rs  main.rs
anyblox-cpplib/: Justfile  cbindgen.toml
anyblox-cpplib/cpp/: .gitignore  CMakeLists.txt
anyblox-cpplib/cpp/cmake/: AnyBloxCppConfig.cmake.in
anyblox-cpplib/cpp/include/: anyblox.hpp
anyblox-cpplib/cpp/res/: taxpayer-sample-self-contained.ignition  taxpayer-sample.csv  trunc8-extension.ignition
anyblox-cpplib/cpp/src/: anyblox.cpp  example_taxpayer.cpp  example_trunc8.cpp  ffi_utils.hpp  sysutil.cpp  sysutil.hpp
anyblox-cpplib/jni/: Cargo.toml
anyblox-cpplib/jni/src/: lib.rs
anyblox-cpplib/rust/: Cargo.toml
anyblox-cpplib/rust/src/: lib.rs  tests.rs
anyblox-cpplib/rust/src/tests/: api_test_with_trunc8.rs
anyblox-cpplib/rust/src/tests/res/: trunc8-extension.toml  trunc8-self-contained.toml  trunc8.wasm
anyblox-datafusion/: Cargo.toml
anyblox-datafusion/examples/: anyblox_table.rs  tpch.rs
anyblox-datafusion/src/: lib.rs
anyblox-dataset-defs/: Bimbo-rle-simd-ext.toml  Bimbo_Agencia_ID.toml  Bimbo_Agencia_ID_simd.toml  CommonGovernment_45_rle.toml  CommonGovernment_45_rle_simd.toml  CommonGovernment_45_rle_simd_nativeavx2.toml  CommonGovernment_45_rle_simd_nativesse2.toml  CommonGovernment_45_rle_simd_stateless.toml  cern-b2hhh.toml  cern_2011_totem.toml  clickbench-strings-fsst-0.toml  clickbench-strings-vortex-0.toml  clickbench-strings-vortex-1.toml  clickbench-strings-vortex-2.toml  clickbench-strings-vortex-3.toml  empty.toml  taxpayer-libfsst.toml  taxpayer.toml  taxpayer_large.toml  tpch-linestatus-rlebitpack.toml  tpch-vortex-s10.toml  tpch-vortex-s20.toml  tpch-vortex.toml
anyblox-format/: Cargo.toml
anyblox-format/src/: de.rs  error.rs  lib.rs  metadata.rs  model.rs  schema.rs  ser.rs
anyblox-parquet/: Cargo.toml  parquet.thrift
anyblox-parquet/src/: main.rs  rle_linestatus.rs
anyblox-tools/: Cargo.toml
anyblox-tools/example-bundle/: Bimbo-rle-ext.toml  Bimbo_Agencia_ID.toml  taxpayer-extension.toml  taxpayer-sample-self-contained.toml  taxpayer-self-contained.toml  trunc8-extension.toml  trunc8-self-contained.toml
anyblox-tools/src/: anyblox2csv.rs  bundler.rs  hash_wasm.rs  viewer.rs
anyblox/res/: trunc8.wasm
anyblox/src/: arrow.rs  builtins.rs  bundle.rs  cli.rs  column_projection.rs  commands.rs  config.rs  data_bufs.rs  fmt.rs  lib.rs  logging.rs  programs.rs  units.rs  version.rs  wasm.rs
anyblox/src/arrow/: byte_repr.rs  utf8_validation.rs
anyblox/src/builtins/: gen.rs  trunc8.rs
anyblox/src/programs/: native.rs  sinks.rs  wasm.rs
anyblox/src/programs/native/: rle.rs  rle_linestatus.rs  rle_simd_avx2.rs  rle_simd_avx512.rs  rle_simd_avx512_stateless.rs  rle_simd_sse2.rs  taxpayer_fsst.rs  taxpayer_libfsst.rs  tpch_vortex.rs  trunc8.rs
anyblox/src/wasm/: mem.rs
arrow-flight-demo/: Cargo.toml  Dockerfile  docker-compose.yml
arrow-flight-demo/src/: decoder.rs  host.rs  lib.rs
arrow-test/: Cargo.toml
base-decompress/: Cargo.toml
compress/: Cargo.toml
cpp_demo/: .gitignore  CMakeLists.txt
cpp_demo/anyblox/: ignition.h
cpp_demo/src/: main.cpp
dataset-utils/: Cargo.toml
dataset-utils/src/: as_parquet.rs  clickbench_fsst.rs  clickbench_vortex.rs  rle_linestatus.rs  single_column_rle.rs  taxpayer.rs  tpch_lineitem.rs  tpch_vortex.rs
decompress/: Cargo.toml  decoder-spec.md  dupa.wat
decompress/cern-root/: Cargo.toml
decompress/cern-root/src/: lib.rs
decompress/clickbench-fsst/: Cargo.toml
decompress/clickbench-fsst/src/: lib.rs
decompress/clickbench-vortex/: Cargo.toml
decompress/clickbench-vortex/src/: lib.rs
decompress/decoder-lib/: Cargo.toml
decompress/decoder-lib/src/: alloc.rs  arrow.rs  column_projection.rs  ffi_utils.rs  io.rs  lib.rs
decompress/decoder-logger/: Cargo.toml
decompress/decoder-logger/src/: lib.rs
decompress/empty-decoder/: Cargo.toml
decompress/empty-decoder/src/: lib.rs
decompress/fsst/: Cargo.toml
decompress/fsst/src/: lib.rs
decompress/int-for/: Cargo.toml
decompress/int-for-simd/: Cargo.toml
decompress/int-for-simd/src/: lib.rs
decompress/int-for/src/: lib.rs
decompress/invalid-utf8/: Cargo.toml
decompress/invalid-utf8/src/: lib.rs
decompress/rle/: Cargo.toml
decompress/rle-linestatus/: Cargo.toml
decompress/rle-linestatus-paged/: Cargo.toml
decompress/rle-linestatus-paged/src/: lib.rs
decompress/rle-linestatus/src/: lib.rs
decompress/rle-simd/: Cargo.toml
decompress/rle-simd-stateless/: Cargo.toml
decompress/rle-simd-stateless/src/: lib.rs
decompress/rle-simd/src/: lib.rs
decompress/rle/src/: lib.rs
decompress/taxpayer-fsst/: Cargo.toml
decompress/taxpayer-fsst-stateless/: Cargo.toml
decompress/taxpayer-fsst-stateless/src/: lib.rs
decompress/taxpayer-fsst/src/: lib.rs
decompress/taxpayer_libfsst/: Cargo.toml
decompress/taxpayer_libfsst/src/: lib.rs
decompress/taxpayer_libfsst_cpp/: CMakeLists.txt  fsst.h  libfsst.cpp  libfsst.hpp  main.cpp
decompress/tpch-vortex/: Cargo.toml
decompress/tpch-vortex/src/: lib.rs
decompress/trunc8/: Cargo.toml
decompress/trunc8/src/: lib.rs
ebpf-decompress/: Cargo.toml
exp/: ablation.py  anyblox-profile  anyblox-profile.json  baseline_charts.py  bench_decoder_fsst.sh  bench_decoder_fsst_batch_sizes.sh  bench_decoder_rle.sh  bench_decoder_rle_batch_sizes.sh  bimbo_rle_charts.py  charts.py  decoder_charts.py  ebpf_overhead.txt  experiments.csv  native_rle_Bimbo_Agencia_ID_EXTENSION_t1.csv  native_rle_Bimbo_Agencia_ID_EXTENSION_t10.csv  native_rle_Bimbo_Agencia_ID_EXTENSION_t11.csv  native_rle_Bimbo_Agencia_ID_EXTENSION_t12.csv  native_rle_Bimbo_Agencia_ID_EXTENSION_t13.csv  native_rle_Bimbo_Agencia_ID_EXTENSION_t14.csv  native_rle_Bimbo_Agencia_ID_EXTENSION_t15.csv  native_rle_Bimbo_Agencia_ID_EXTENSION_t16.csv  native_rle_Bimbo_Agencia_ID_EXTENSION_t2.csv  native_rle_Bimbo_Agencia_ID_EXTENSION_t3.csv  (+176 more)
(+590 files in other folders)
