[package]
name = "anyblox-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
arrow = { workspace = true }
blake3 = "1.6.0"
sha2 = "0.11.0-pre.4"
sha3 = "0.11.0-pre.4"
whirlpool = "0.11.0-pre.4"
clap = { version = "4.4.8", features = ["derive"] }
criterion = "0.5.1"
crossbeam = "0.8.4"
indicatif = "0.17.7"
anyblox = { path = "../anyblox" }
memmap2 = "0.9.4"
num_cpus = "1.16"
rayon = "1.10"
streebog = "0.11.0-pre.4"
wasmtime = { version = "25.0.1", default-features = false, features = [
    "addr2line",
    # "async",
    "cache",
    "component-model",
    "coredump",
    "cranelift",
    "debug-builtins",
    "demangle",
    # "gc",
    "parallel-compilation",
    # "pooling-allocator",
    "profiling",
    "runtime",
    "std",
    # "threads",
    "wat",
] }

[[bin]]
name = "anyblox-bench"
path = "src/main.rs"

[[bin]]
name = "anyblox-ablation"
path = "src/ablation.rs"

[[bin]]
name = "anyblox-decoder-hash"
path = "src/decoder_hash.rs"