[package]
name = "anyblox-datafusion"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyblox = { path = "../anyblox" }
anyblox-format = { path = "../anyblox-format" }
arrow = { workspace = true }
async-trait = "0.1.88"
datafusion = { path = "../vendored/datafusion/datafusion/core" }
futures = "0.3.30"
memmap2 = "0.9.4"
tokio = { workspace = true }
regex = "1.11.1"

[dev-dependencies]
anyhow = "1.0.79"
parse_duration = "2.1.1"
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
