[package]
name = "anyblox-parquet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
arrow = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
compress = { path = "../compress" }
csv = "1.3.0"
indicatif = "0.17.7"
memmap2 = { version = "0.9.4" }
parquet = { path = "../vendored/arrow-rs/parquet" }
rust_decimal = "1.36"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[[bin]]
name = "anyblox-parquet"
path = "src/main.rs"

[[bin]]
name = "anyblox-parquet-rle-linestatus"
path = "src/rle_linestatus.rs"
