[package]
name = "anyblox"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "anyblox-cli"
path = "src/cli.rs"

[dependencies]
anyhow = "1.0.79"
# Required ipc improvements will be released in August as 53.0.0, for now we refer to unreleased nightly changes.
arrow = { workspace = true, features = ["ffi"] }
blake3 = "1.5"
bytes = "1.8"
chrono = "0.4.38"
clap = { version = "4.4.18", features = ["derive"] }
comfy-table = "7.1.0"
crc32fast = "1.3.2"
decoder-lib = { path = "../decompress/decoder-lib", default-features = false, features = [
    "std",
] }
fsst-rs = { path = "../fsst-rs" }
futures = "0.3.30"
anyblox-format = { path = "../anyblox-format" }
indicatif = "0.17.7"
lru = "0.12.4"
memmap2 = "0.9.4"
num_cpus = "1.16.0"
opentelemetry = { version = "0.29.1", optional = true }
opentelemetry-http = { version = "0.29.0", features = [
    "reqwest",
    "reqwest-rustls",
], optional = true }
opentelemetry-otlp = { version = "0.29.0", features = [
    "http-proto",
], optional = true }
opentelemetry_sdk = { version = "0.29.0", features = [
    "rt-tokio",
], optional = true }
rayon = "1.8.1"
reqwest = { version = "0.12", features = ["rustls-tls"], optional = true }
rustix = {  version = "1.0.7", features = ["mm", "param"] }
rustyline = "14.0.0"
simd-adler32 = "0.3.7"
simdutf = "0.5.1"
smallvec = "1.13"
static_assertions = "1.1.0"
thiserror = "1.0.56"
tokio = { workspace = true }
tracing = { version = "0.1.40", features = ["release_max_level_warn"] }
tracing-appender = "0.2.3"
tracing-opentelemetry = { version = "0.30.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
vortex = { workspace = true }
wasmtime = { version = "26.0.1", default-features = false, features = [
    "addr2line",
    # "async",
    "cache",
    "component-model",
    "coredump",
    "cranelift",
    "debug-builtins",
    "demangle",
    # "gc",
    "parallel-compilation",
    # "pooling-allocator",
    "profiling",
    "runtime",
    "std",
    # "threads",
    "wat",
] }

[build-dependencies]
anyhow = "1.0.79"

[features]
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry-http",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:reqwest",
    "dep:tracing-opentelemetry",
]
default = ["opentelemetry"]
