[package]
name = "arrow-flight-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
arrow = "53.0.0"
arrow-flight = "53.0.0"
bytes = "1.9.0"
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3"
simd-adler32 = "0.3.7"
tokio = { version = "1.38.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["channel", "server"] }
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[bin]]
name = "host"
path = "src/host.rs"

[[bin]]
name = "decoder"
path = "src/decoder.rs"