[workspace]
members = [
    "cern-root",
    "clickbench-vortex",
    "decoder-lib",
    "decoder-logger",
    "empty-decoder",
    "fsst",
    "int-for",
    "int-for-simd",
    "invalid-utf8",
    "rle",
    "rle-linestatus",
    "rle-linestatus-paged",
    "rle-simd",
    "rle-simd-stateless",
    "taxpayer-fsst",
    "taxpayer-fsst-stateless",
    "taxpayer_libfsst",
    "trunc8",
    "tpch-vortex",
    "clickbench-fsst",
]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 0
strip = "debuginfo"
