[package]
name = "clickbench-vortex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.9.0"
decoder-lib = { path = "../decoder-lib", default-features = false, features = [
    "alloc",
    "panic-handler",
    "std",
    "wasm-core",
] }
futures = { version = "0.3", default-features = false, features = ["executor"] }
lock_api = "0.4.12"
talc = "4.4"
vortex = { path = "../../vendored/vortex/vortex" }

[features]
default = []
log = ["decoder-lib/log"]
