[package]
name = "trunc8"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
decoder-lib = { path = "../decoder-lib", default-features = false, features = [
    "panic-handler",
    "wasm-core",
] }

[features]
default = []
log = ["decoder-lib/log"]
std = ["decoder-lib/std"]
